fix: update crud eventfield
